# simpleSoftwareRenderer

./: CMakeLists.txt  Model.cpp  Model.h  README.md  TGAImage.cpp  TGAImage.h  geometry.cpp  geometry.h  main.cpp
